Added comments and camps in Internationalization
Non è stato modificato il codice, solo commenti e campi per l'internazionalizzazione. Il mio inglese fa schifo, sentitevi liberi di modificare il tutto come vi pare.

--- a/VintedProject/src/main/resources/language/messages_en_US.properties
+++ b/VintedProject/src/main/resources/language/messages_en_US.properties
@@ -1,5 +1,21 @@
+#Se devi mettere un ' ricordati che devi scriverne un altro. Es: Don't exist VA SCRITTO Don''t exist. Questo va fatto per mostrare correttamente il messaggio!
+
 welcome=Hello!
-firstname.notempty=Please provide valid firstname.
-user.not = NON ESISTE
+
+firstname.not.empty=Please provide a valid firstname.
+lastname.not.empty=Please provide a valid lastname.
+email.not.valid=Invalid email.
+birthdate.past =Invalid birthdate.
+nickname.not.empty =Nickname cannot be empty!
+password.not.empty=Password cannot be empty!
+
+user.not.present = User {0} not present in DB
+user.order.not.present=Doesn''t exist any order made from user with id: {0}
+user.nickname.not.present=Doesn''t exist any user with nickname: {0}
+
+payment.not.present=Doesn''t exist any payment with id: {0}
+order.not.present=Doesn''t exist any order with id: {0}
+insertion.not.present=Don't exist any insertion with id: [%s]
 
 exhausted.api=You have exhausted your API Request Quota
+keycloak.token.error=Error while retrieving the token from keycloak!
